tests/transpiler/x/clj/append_builtin.clj
;; Generated by Mochi v0.10.31 on 2025-07-20 09:40:55 GMT+7
(ns main)

(def a [1 2])

(defn -main []
  (println (append a 3)))

(-main)
